<resources>
    <string name="app_name">My Application</string>

    <string name="create_account_button">Create Account</string>
    <string name="logInnButton">Log Inn</string>

    <string name="dont_have_account">"Don't have a account?"</string>
    <string name="allready_have_account">"Already have a account?"</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username_input">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello HOME fragment</string>
    <string name="hello_search_fragment">Hello SEARCH fragment</string>
    <string name="hello_profile_fragment">Hello PROFILE fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_create_fragment">Hello CREATE POST fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="following">Following</string>
    <string name="followers">Follower</string>

    <string name="followingNumber">0</string>
    <string name="followersNumber">0</string>

    <string name="usernamePlaceholder">username</string>


    <string name="addComment">Add comment</string>

    <string name="settings_title">Settings</string>
    <string name="save_settings">Save Changes</string>
    <string name="back">Back</string>
    <string name="new_password">New Password</string>
    <string name="new_password_hint">Leave empty to keep current</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">Tell us about yourself</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>

</resources>