<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_account">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:orientation="vertical">

        <EditText
            android:id="@+id/username_input"

            android:gravity="center"
            android:hint="@string/username_input"

            android:background="@drawable/round_edit_text_background"
            android:padding="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/Email_input"

            android:gravity="center"
            android:hint="@string/email"

            android:background="@drawable/round_edit_text_background"
            android:padding="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edit_text_background"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/create_account_button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"

            android:background="@drawable/loginn_and_create_account_background"

            android:text="@string/create_account_button"/>


        <Button
            android:id="@+id/already_have_account"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"

            app:backgroundTint="@color/clear"
            android:textColor="@color/black"

            android:text="@string/allready_have_account"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
