<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_account">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:orientation="vertical">

        <EditText
            android:id="@+id/Email_input"

            android:gravity="center"
            android:text="@string/email"

            android:background="@drawable/round_edit_text_background"
            android:padding="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/password_input"

            android:gravity="center"
            android:text="@string/password"

            android:background="@drawable/round_edit_text_background"
            android:padding="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"/>


        <Button
            android:id="@+id/create_account_button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"

            android:text="@string/create_account_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>